# messaging-library

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  conan.cmake  conanfile.txt  docker-compose.yml
docs/: activity_diagram.puml  class_diagram.puml  sequence_diagram.puml
src/: CMakeLists.txt  main.cpp
src/common/: message.h  message_queue.cpp  message_queue.h
src/publisher/: publisher.cpp  publisher.h
src/subscriber/: subscriber.cpp  subscriber.h
test/: CMakeLists.txt  test_pub_sub_api.cpp
